--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3",
+    "mongoose": "^5.12.7",
     "multer": "^1.4.2",
-    "react-scripts": "^4.0.3"
+    "react-paypal-button-v2": "^2.6.3",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "redux-thunk": "^2.3.0",
+    "web-vitals": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
